--- a/indexbu.html
+++ b/indexbu.html
@@ -5,4 +5,4 @@ title: Home
 
 {% assign page = site.posts.first %}
 {% assign content = page.content %}
-{% include home.html %}
+{% include post.html %}
